--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<main>
+<title>{{ title | translate }}</title>
+
+<main id="dashboard">
     <div id="loader-wrapper">
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
     </div>
     <div class="u-all">
-        {{ 'home.navbar_title' | translate }}
         <app-header (changeLang)="switchLang($event)"/>
         <router-outlet />
         <app-footer/>
