--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,14 +9,16 @@
                 </div>
                 <p class="margin_top margin_top_20"></p>
                 <ul>
-                    <li><a href="/termsofuse" class=""><strong><span class="arrow_carrot-2right"></span> Terms
-                                of Use</strong></a></li>
-                    <li><a href="/privacypolicy" class=""><strong><span class="arrow_carrot-2right"></span>
-                                Privacy Policy</strong></a></li>
+                    <li><a 
+                        routerLink="/terms-of-use"
+                         class=""><strong><span class="arrow_carrot-2right"></span>{{ 'footer_section.terms_of_use' | translate }}</strong></a></li>
+                    <li><a 
+                        routerLink="/privacy-policy"
+                         class=""><strong><span class="arrow_carrot-2right"></span>{{ 'footer_section.privacy_policy' | translate }}</strong></a></li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h5>Contact</h5>
+                <h5>{{ 'footer_section.contact' | translate }}</h5>
                 <ul class="uf-contactinfo">
                     <li><span class="icon_mail"></span>recruitment&#64;pacificseainvests.com<br></li>
                     <li><span class="icon_phone"></span> +63 (02) 551 6167 / +63 (02) 659 7113</li>
@@ -26,7 +28,7 @@
                 </ul>
             </div>
             <div class="col-md-4">
-                <h5>Follow Us</h5>
+                <h5>{{ 'footer_section.follow_us' | translate }}</h5>
                 <ul class="uf-contactinfo">
                     <li><a href="https://www.facebook.com/PacificseaBPOServices/" target="blank"
                             style="color:#fff;"><span class="social_facebook"></span>Facebook</a></li>
@@ -35,7 +37,7 @@
                 </ul>
             </div>
             <div class="col-md-3 hidden">
-                <h5>Registered company</h5>
+                <h5>{{ 'footer_section.registered_company' | translate }}</h5>
                 <p class="margin_top margin_top_20"><img src="/images/pagcor-logo.png" width="90"
                         height="70"></p>
             </div>
@@ -45,7 +47,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12 alignleft">
-                    <p>© 2024 Pacific Sea BPO Services, Inc. All rights reserved.</p>
+                    <p> © {{ 'footer_section.copyright' | translate | replaceValue:'[year]': year.toString() }}</p>
                 </div>
             </div>
         </div>
