--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,119 +1,262 @@
 <header class="desktop_header no-mobile">
-    <div class="u-topbar">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="ut-social pull-right"><a title="繁體中文"><img data-rjs="2"
-                                src="../images/flag-cn.png"></a><a title="Malaysia/English"><img data-rjs="2"
-                                src="../images/flag-my.png"></a><a title="ภาษาไทย"><img data-rjs="2"
-                                src="../images/flag-th.png"></a><a title="Bhs Indonesia"><img data-rjs="2"
-                                src="../images/flag-id.png"></a><a title="Tiếng Việt"><img data-rjs="2"
-                                src="../images/flag-vn.png"></a><a title="Filipino/English"><img data-rjs="2"
-                                src="../images/flag-ph.png"></a></div>
-                </div>
-            </div>
+  <div class="u-topbar">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="ut-social pull-right">
+            <a (click)="changeLanguage('cn')" title="繁體中文"
+              ><img data-rjs="2" src="../images/flag-cn.png" /></a
+            ><a (click)="changeLanguage('bm')" title="Malaysia/English"
+              ><img data-rjs="2" src="../images/flag-my.png" /></a
+            ><a (click)="changeLanguage('th')" title="ภาษาไทย"
+              ><img data-rjs="2" src="../images/flag-th.png" /></a
+            ><a (click)="changeLanguage('id')" title="Bhs Indonesia"
+              ><img data-rjs="2" src="../images/flag-id.png" /></a
+            ><a (click)="changeLanguage('vn')" title="Tiếng Việt"
+              ><img data-rjs="2" src="../images/flag-vn.png" /></a
+            ><a (click)="changeLanguage('en')" title="Filipino/English"
+              ><img data-rjs="2" src="../images/flag-ph.png"
+            /></a>
+          </div>
         </div>
+      </div>
     </div>
-    <div id="dashboard" class="sticky-wrapper" style="height: 108px;">
-        <div class="u-header">
-            <div class="container">
-                <div class="uh-logo pull-left">
-                    <h1><a routerLink="/" title="Unique"><img src="/images/logo.png" class="img-responsive"
-                                alt="Pacific Sea BPO"></a></h1>
-                </div>
-                <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-collapse"><span class="sr-only">Toggle Navigation</span><i
-                            class="icon_menu"></i></button></div>
-                <nav class="collapse navbar-collapse">
-                    <ul id="headernavigation" class="nav navbar-nav pull-right">
-                        <li>
-                            <a routerLink="/home" fragment="dashboard" class="page-scroll" aria-current="page" routerLinkActive="active">Home</a>
-                        </li>
-                        <li>
-                            <a routerLink="/companyprofile" class="page-scroll" routerLinkActive="active">Company Profile</a>
-                        </li>
-                        <li>
-                            <a routerLink="/careers" class="page-scroll" routerLinkActive="active">Careers</a>
-                        </li>
-                        <li>
-                            <a routerLink="/faqs" class="page-scroll" routerLinkActive="active">FAQS</a>
-                        </li>
-                        <li>
-                            <a routerLink="/home" fragment="outreach" class="page-scroll" aria-current="page">Outreach Programs</a>
-                        </li>
-                        <li>
-                            <a routerLink="/home" fragment="contact" class="page-scroll" aria-current="page">Contact Us</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+  </div>
+  <div id="dashboard" class="sticky-wrapper" style="height: 108px">
+    <div class="u-header">
+      <div class="container">
+        <div class="uh-logo pull-left">
+          <h1>
+            <a routerLink="/" title="Unique"
+              ><img
+                src="/images/logo.png"
+                class="img-responsive"
+                alt="Pacific Sea BPO"
+            /></a>
+          </h1>
         </div>
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target=".navbar-collapse"
+          >
+            <span class="sr-only">Toggle Navigation</span
+            ><i class="icon_menu"></i>
+          </button>
+        </div>
+        <nav class="collapse navbar-collapse">
+          <ul id="headernavigation" class="nav navbar-nav pull-right">
+            <li>
+              <a
+                routerLink=""
+                fragment="dashboard"
+                class="page-scroll"
+                aria-current="page"
+                routerLinkActive="active"
+                >{{ 'home.navbar_title' | translate }}</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/companyprofile"
+                class="page-scroll"
+                routerLinkActive="active"
+                >{{ 'company_profile.navbar_title' | translate }}</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/careers"
+                class="page-scroll"
+                routerLinkActive="active"
+                >{{ 'careers.navbar_title' | translate }}</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/faqs"
+                class="page-scroll"
+                routerLinkActive="active"
+                >{{ 'faqs.navbar_title' | translate }}</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink=""
+                fragment="outreach"
+                class="page-scroll"
+                aria-current="page"
+                >{{ 'outreach.navbar_title' | translate }}</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink=""
+                fragment="contact"
+                class="page-scroll"
+                aria-current="page"
+                >{{ 'contact.navbar_title' | translate }}</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
+  </div>
 </header>
 
 <div class="mob-header">
-    <div class="container">
-        <a routerLink="/" title="Unique"><img src="/images/logo.png" class="img-responsive"
-            alt="Pacific Sea BPO"></a>
-        <div class="nav-list">
-            <div class="m-menu em"><span><i class="icon_menu"></i></span>
-                <div class="mob-menu">
-                    <div id="menu" class="sliding-menu">
-                        <div class="sliding-menu-wrapper" style="width: 298px;">
-                            <ul id="menu-panel-k53yc" class="menu-panel-root" style="width: 298px;">
-                                <li>
-                                    <a routerLink="/home" fragment="dashboard" class="page-scroll" aria-current="page" routerLinkActive="active">{{ 'home.navbar_title' }}</a>
-                                </li>
-                                <li>
-                                    <a routerLink="/companyprofile" class="page-scroll" routerLinkActive="active">Company Profile</a>
-                                </li>
-                                <li>
-                                    <a routerLink="/careers" class="page-scroll" routerLinkActive="active">Careers</a>
-                                </li>
-                                <li>
-                                    <a routerLink="/faqs" class="page-scroll" routerLinkActive="active">FAQS</a>
-                                </li>
-                                <li>
-                                    <a routerLink="/home" fragment="outreach" class="page-scroll" aria-current="page">Outreach Programs</a>
-                                </li>
-                                <li>
-                                    <a routerLink="/home" fragment="contact" class="page-scroll" aria-current="page">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+  <div class="container">
+    <a routerLink="/" title="Unique"
+      ><img src="/images/logo.png" class="img-responsive" alt="Pacific Sea BPO"
+    /></a>
+    <div class="nav-list">
+      <div class="m-menu em">
+        <span><i class="icon_menu"></i></span>
+        <div class="mob-menu">
+          <div id="menu" class="sliding-menu">
+            <div class="sliding-menu-wrapper" style="width: 298px">
+              <ul
+                id="menu-panel-k53yc"
+                class="menu-panel-root"
+                style="width: 298px"
+              >
+                <li>
+                  <a
+                    routerLink=""
+                    fragment="dashboard"
+                    class="page-scroll"
+                    aria-current="page"
+                    routerLinkActive="active"
+                    >{{ 'home.navbar_title' | translate }}</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink="/companyprofile"
+                    class="page-scroll"
+                    routerLinkActive="active"
+                    >{{ 'company_profile.navbar_title' | translate }}</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink="/careers"
+                    class="page-scroll"
+                    routerLinkActive="active"
+                    >{{ 'careers.navbar_title' | translate }}</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink="/faqs"
+                    class="page-scroll"
+                    routerLinkActive="active"
+                    >{{ 'faqs.navbar_title' | translate }}</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink=""
+                    fragment="outreach"
+                    class="page-scroll"
+                    aria-current="page"
+                    >{{ 'outreach.navbar_title' | translate }}</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink=""
+                    fragment="contact"
+                    class="page-scroll"
+                    aria-current="page"
+                    >{{ 'contact.navbar_title' | translate }}</a
+                  >
+                </li>
+              </ul>
             </div>
+          </div>
         </div>
-        <div class="nav-list">
-            <div class="m-language em"><span><i class="icon_globe"></i></span>
-                <div class="mob-language">
-                    <div id="language" class="sliding-menu">
-                        <div class="sliding-menu-wrapper" style="width: 298px;">
-                            <ul id="menu-panel-5yfc7" class="menu-panel-root" style="width: 298px;">
-                                <li><a (click)="changeLanguage('cn')" title="繁體中文"><img data-rjs="2"
-                                            src="/images/flag-cn.png" style="height: 16px; width: 16px;">
-                                        繁體中文</a></li>
-                                <li><a (click)="changeLanguage('bm')" title="Malaysia/English"><img data-rjs="2"
-                                            src="/images/flag-my.png" style="height: 16px; width: 16px;">
-                                        Malaysia/English</a></li>
-                                <li><a (click)="changeLanguage('th')" title="ภาษาไทย"><img data-rjs="2"
-                                            src="/images/flag-th.png" style="height: 16px; width: 16px;">
-                                        ภาษาไทย</a></li>
-                                <li><a (click)="changeLanguage('id')" title="Bhs Indonesia"><img data-rjs="2"
-                                            src="/images/flag-id.png" style="height: 16px; width: 16px;"> Bhs
-                                        Indonesia</a></li>
-                                <li><a (click)="changeLanguage('vn')" title="Tiếng Việt"><img data-rjs="2"
-                                            src="/images/flag-vn.png" style="height: 16px; width: 16px;"> Tiếng
-                                        Việt</a></li>
-                                <li><a (click)="changeLanguage('en')" title="Filipino/English"><img data-rjs="2"
-                                            src="/images/flag-ph.png" style="height: 16px; width: 16px;">
-                                        Filipino/English</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="nav-list">
+      <div class="m-language em">
+        <span><i class="icon_globe"></i></span>
+        <div class="mob-language">
+          <div id="language" class="sliding-menu">
+            <div class="sliding-menu-wrapper" style="width: 298px">
+              <ul
+                id="menu-panel-5yfc7"
+                class="menu-panel-root"
+                style="width: 298px"
+              >
+                <li>
+                  <a (click)="changeLanguage('cn')" title="繁體中文"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-cn.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    繁體中文</a
+                  >
+                </li>
+                <li>
+                  <a (click)="changeLanguage('bm')" title="Malaysia/English"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-my.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    Malaysia/English</a
+                  >
+                </li>
+                <li>
+                  <a (click)="changeLanguage('th')" title="ภาษาไทย"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-th.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    ภาษาไทย</a
+                  >
+                </li>
+                <li>
+                  <a (click)="changeLanguage('id')" title="Bhs Indonesia"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-id.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    Bhs Indonesia</a
+                  >
+                </li>
+                <li>
+                  <a (click)="changeLanguage('vn')" title="Tiếng Việt"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-vn.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    Tiếng Việt</a
+                  >
+                </li>
+                <li>
+                  <a (click)="changeLanguage('en')" title="Filipino/English"
+                    ><img
+                      data-rjs="2"
+                      src="/images/flag-ph.png"
+                      style="height: 16px; width: 16px"
+                    />
+                    Filipino/English</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
