--- a/src/app/main-content/faqs/faqs.component.html
+++ b/src/app/main-content/faqs/faqs.component.html
@@ -1,4 +1,4 @@
-<app-container-row-section idname="companytrips" classname="faq-info section-info">
+<app-container-row-section idname="faqs" classname="faq-info section-info">
 
     <div class="content-head center">
         <h3 class="center_divider"><em>FREQUENTLY ASKED <span class="highlight-color">QUESTIONS</span></em></h3>
